# metacol

./: CMakeLists.txt  README.md  package.xml
cmake/: metacolConfig.cmake.in
include/: not_movable.h  static_asserts.h
include/metacol/: call_for_each.h  call_for_each_in.h  call_for_each_in2.h  check_indices.h  conjunction.h  constants.h  container_cat.h  csqrt.h  disjunction.h  enable_if.h  is_iterator.h  negation.h  not_copyable.h  poly_lambda.h  range.h  rep_tup.h  sfinae_note.md  sub_pack.h  sum.h  transform.h  zip.h
include/ms/: enable_if.h  sfinae_note.md
include/ts/: FirstOf.h  append.h  bool_constant.h  check_indices.h  constexp_false.h  first_of.h  negation.h  prepend.h  rep_tup.h  sub_pack.h  zip.h
include/vs/: binomial_coefficient.h  call_for_each  call_for_each_in2.h  constants.h  csqrt.h  poly_lambda.h
inlclude/vs/: poly_lambda.h
