<?xml version="1.0"?>
<package format="2">
  <name>metacol</name>
  <version>0.0.0</version>
  <description>A collection of meta-programing tricks</description>

  <author>Jeremie Deray</author>

  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

<!--  <url type="website">http://ros.org/wiki/todo</url>-->
  <url type="repository">https://github.com/artivis/metacol.git</url>
  <url type="bugtracker">https://github.com/artivis/metacol/issues</url>

  <license>todo</license>

  <buildtool_depend>cmake</buildtool_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
